Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33241

QComboBox cannot automatically close the shown list if clicked again on its extend button.

    XMLWordPrintable

Details

    • 86f8bee96b658d1712733477e26e70a1fd723102

    Description

      Test code shown below.

      QStringList fonts;
      fonts << "Arial" << "Helvetica" << "Times" << "Courier";
      QComboBox draftComboBox;
      draftComboBox.addItems(fonts);
      draftComboBox.show();
      

      After clicking the button to show the drop-down list, you should be able to click it a second time to close the list.

      The issue cannot be reproducible with Qt 4.8.5 environment.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            leonlee Leonard Lee
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes