src/plugins/platforms/cocoa/qnsview.mm
@@ -600,6 +600,7 @@ static QTouchDevice *touchDevice = 0;
         QWindowSystemInterface::handleCloseEvent(m_platformWindow->m_activePopupWindow);
         QWindowSystemInterface::flushWindowSystemEvents();
         m_platformWindow->m_activePopupWindow = 0;
+        return;
     }
     if ([self hasMarkedText]) {
         NSInputManager* inputManager = [NSInputManager currentInputManager];
